jobs/job_60783810/uncert/errors/benchmark_246/solver_2.txt
INFO: Pointer analysis took 0 sec 0 ms
input.cc:29:7: warning: incompatible pointer to integer conversion initializing 'int' with an expression of type 'void *' [-Wint-conversion]
  int curr = NULL;
      ^      ~~~~
input.cc:44:12: warning: incompatible pointer to integer conversion assigning to 'int' from 'struct list *' [-Wint-conversion]
head_index = memory0[head_ptr];
           ^ ~~~~~~~~~~~~~~~~~
input.cc:45:7: error: use of undeclared identifier 'head'
  if (head == NULL) return;
      ^
input.cc:47:18: error: use of undeclared identifier 'head'
  while (memory1[head].value == m) {
                 ^
input.cc:48:17: error: use of undeclared identifier 'head'
    if (memory1[head].next != NULL) {
                ^
input.cc:49:7: error: use of undeclared identifier 'head'
      head = memory1[head].next;
      ^
input.cc:49:22: error: use of undeclared identifier 'head'
      head = memory1[head].next;
                     ^
input.cc:56:23: error: use of undeclared identifier 'head'
  memory0[head_ptr] = head;
                      ^
2 warnings and 6 errors generated.
JYcpW_Ptr2Arr.c:29:7: warning: incompatible pointer to integer conversion initializing 'int' with an expression of type 'void *' [-Wint-conversion]
  int curr = NULL;
      ^      ~~~~
JYcpW_Ptr2Arr.c:44:12: warning: incompatible pointer to integer conversion assigning to 'int' from 'struct list *' [-Wint-conversion]
head_index = memory0[head_ptr];
           ^ ~~~~~~~~~~~~~~~~~
JYcpW_Ptr2Arr.c:45:7: error: use of undeclared identifier 'head'
  if (head == NULL) return;
      ^
JYcpW_Ptr2Arr.c:47:18: error: use of undeclared identifier 'head'
  while (memory1[head].value == m) {
                 ^
JYcpW_Ptr2Arr.c:48:17: error: use of undeclared identifier 'head'
    if (memory1[head].next != NULL) {
                ^
JYcpW_Ptr2Arr.c:49:7: error: use of undeclared identifier 'head'
      head = memory1[head].next;
      ^
JYcpW_Ptr2Arr.c:49:22: error: use of undeclared identifier 'head'
      head = memory1[head].next;
                     ^
JYcpW_Ptr2Arr.c:56:23: error: use of undeclared identifier 'head'
  memory0[head_ptr] = head;
                      ^
2 warnings and 6 errors generated.
